# Learning-Python-Crash-Course

./: README.md  main.py  pyproject.toml
apps-uv/crash-course/: 0_scratch.py  10_Files_and_Exceptions.ipynb  11_Testing_your_code.ipynb  2_Variables_Data_Types.ipynb  3_Intro_Lists.ipynb  4_Working_with_Lists.ipynb  5_If_Statements.ipynb  6_Dictionaries.ipynb  7_User_Input_While_Loops.ipynb  8_Functions.ipynb  9_Classes.ipynb  Appendix_D_Git_Version_Control.ipynb  car_module.py  communist_manifesto.txt  list_of_text.txt  name_function.py  pizza_module.py  pyproject.toml  survey.py  username.json
